[gd_scene load_steps=3 format=3 uid="uid://gnuk076k60b8"]

[ext_resource type="Script" uid="uid://cy1d7gebi1gny" path="res://resourceMenu.gd" id="1_uhea6"]
[ext_resource type="PackedScene" uid="uid://ct3e8hk602mes" path="res://ResourceDisplay.tscn" id="2_6xo4p"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_uhea6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resources"
horizontal_alignment = 3
vertical_alignment = 1

[node name="ResourceDisplay" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_6xo4p")]
layout_mode = 2

[node name="ResourceDisplay2" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_6xo4p")]
layout_mode = 2

[node name="ResourceDisplay3" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_6xo4p")]
layout_mode = 2

[node name="ResourceDisplay4" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_6xo4p")]
layout_mode = 2
